@startuml
class InitProgram{
    + void start();
}

enum TypeConnection{
    SERVER
    CLIENT
}
abstract class Connection{
    + const TypeConnection type;
    + bool inited = false;
	{abstract} + string  receiveMessage();
	{abstract} + void sendMessage(string);
}

class ConnectionServer{
    + ServerConnection();
    + void initConnection() override;
    + string getMessage() override;
    + void sendMessage(string) override;
    + ~ServerConnection();
}
class ConnectionClient{
    + ClientConnection();
    + void setPortNumber(const int);
    + void setIpHost(const string);
    + void initConnection() override;
    + string getMessage() override;
    + void sendMessage(string message) override;
}


class InformationMessage{
    + string getInfo();
    + void setInfo(const Info);
}


class Game{
    + Player player1;
    + Player player2;
    + void initGame();
    - void updateState();
    - void updateTimer();
    - void defineFinalResult();
    - void showCard(QPushButton*&);
    - void mixCards();
    - void distributeCards();
}
class Player{
    + string name;
    + int points;
    + bool myTurn = false;
}
class Card{
    + string id;
    + int positionI;
    + int positionJ;
    + string image;
}
class MatrixMemory{
    - List<string> ram;
    - List<Card> disk;
    + Card getCard(int, int);
    - Card replaceCard();
    + string getMemoryState();
}

class Server{
    - Game game;
    - ConnectionServer connection;
    - MatrixMemory;
    + void updateState();
    + void initGame();
}
class MainWindow{
    - ConnectionClient connection;
    - Message message;
    - InformationMessage;
    + void initGame();
    - void updateState();
    - void updateTimer();
    - void defineFinalResult();
    - void scopeEventClick();
    - void showCard(QPushButton*&);
    - void mixCards();
    - void distributeCards();
}

InitProgram "1"  o-- "1" MainWindow : > create
InitProgram "1" o-- "1" Server : > create

Connection <-- ConnectionServer : > inherit
Connection <-- ConnectionClient: > inherit
Connection *-- TypeConnection : > have

MatrixMemory "1" o-- "30...60" Card : > have
Game "1" *-- "2" Player : > have

Server "1" o-- "1" InformationMessage : saveInformation
Server "1" *-- "1" ConnectionServer : > use
Server "1" *-- "1" Game : > use
Server "1" *-- "1" MatrixMemory : > use

MainWindow "1" *-- "1" ConnectionClient: > use
MainWindow  "1" o-- "1" InformationMessage : saveInformation

MainWindow --- Server: comunicate
@enduml
